<resources>
    <string name="app_name">TomicsAndroidAppClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="free_webtoon">나만무료</string>
    <string name="serialize">연재</string>
    <string name="top_hundred">TOP100</string>
    <string name="ended_webtoon">완결</string>
    <string name="one_cut">뜨는한컷</string>
    <string name="hot">Hot!</string>
    <string name="signup">회원가입</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_text">로그인하여 \n더 많은 정보를 확인해보세요</string>
    <string name="login">로그인</string>
    <string name="my_page">마이 페이지</string>
    <string name="coin_history">코인 내역</string>
    <string name="ticket_history">이용권 내역</string>
    <string name="coupon_history">쿠폰등록 및 내역</string>
    <string name="my_library">내 서재</string>
    <string name="user_watched">내가 본</string>
    <string name="favorites">즐겨찾기</string>
    <string name="intestine">내 소장작품</string>
    <string name="event">이벤트</string>
    <string name="ongoing_event">진행 중인 이벤트</string>
    <string name="customer_service">고객센터</string>
    <string name="faq">자주 묻는 질문</string>
    <string name="announcement">공지사항</string>
    <string name="inquiry_1by1">1:1 문의</string>
    <string name="popularity_rank">인기순</string>
    <string name="update_rank">업데이트순</string>
    <string name="free_every_12_hour">12시간마다 무료</string>
    <string name="tag">#태그</string>
    <string name="see_more">+ 더보기</string>
    <string name="notice">[공지] 투믹스 휴면정책 변경안내 N</string>
    <string name="real_time">실시간</string>
    <string name="new_toon">신작</string>
    <string name="best">BEST</string>
    <string name="search_hint">작품명, 작가명, 해시태그 검색</string>
    <string name="loading">Loading...</string>

</resources>