<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:padding="16dp"
    android:background="#FCFCFC"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/tv_login_notice"
        android:layout_marginStart="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/btn_signup"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/signup_button_background"
        android:drawableStart="@drawable/signup_icon_25x25"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:text="@string/signup"
        android:textColor="@color/tomics_red_color"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_login_notice"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/btn_login"
        android:layout_marginHorizontal="12dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        android:textSize="17sp"
        android:textStyle="bold"
        android:background="@color/tomics_red_color"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_notice" />


</androidx.constraintlayout.widget.ConstraintLayout>