<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.tomicsandroidappclone.presentation.viewmodel.BaseViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/dl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="false"
        tools:context=".presentation.base.BaseActivity"
        tools:openDrawer="start">

        <RelativeLayout
            android:id="@+id/rl_main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_add_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_advertisement"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_advertisement"/>

                <ImageView
                    android:id="@+id/iv_add_close"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/icon_crossline_25x25"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_top_container"
                android:layout_width="match_parent"
                android:layout_below="@+id/rl_add_container"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageButton
                        android:id="@+id/iv_drawer"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:background="@color/white"
                        android:src="@drawable/icon_drawer_tab" />

                    <ImageView
                        android:id="@+id/iv_tomics_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/icon_tomics_logo" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/icon_bookmark" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/icon_cache" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/icon_search" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="clip_horizontal"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="5dp">

                    <RelativeLayout
                        android:id="@+id/rl_free_webtoon"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:gravity="bottom">

                        <TextView
                            android:id="@+id/tv_free_webtoon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/free_webtoon"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/white" />

                    </RelativeLayout>

                    <Space
                        android:layout_width="30dp"
                        android:layout_height="match_parent"/>
                    <RelativeLayout
                        android:id="@+id/rl_serialize"
                        android:layout_width="30dp"
                        android:layout_toEndOf="@+id/rl_free_webtoon"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_serialize"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/serialize"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/white" />
                    </RelativeLayout>

                    <Space
                        android:layout_width="30dp"
                        android:layout_height="match_parent"/>
                    <RelativeLayout
                        android:id="@+id/rl_top_hundred"
                        android:layout_width="60dp"
                        android:layout_toEndOf="@+id/rl_serialize"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_top_hundred"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/top_hundred"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_alignParentBottom="true"
                            android:layout_height="3dp"
                            android:background="@color/white" />
                    </RelativeLayout>
                    <Space
                        android:layout_width="30dp"
                        android:layout_height="match_parent"/>
                    <RelativeLayout
                        android:id="@+id/rl_ended_webtoon"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@+id/rl_top_hundred">

                        <TextView
                            android:id="@+id/tv_ended_webtoon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/ended_webtoon"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_alignParentBottom="true"
                            android:layout_height="3dp"
                            android:background="@color/white" />
                    </RelativeLayout>
                    <Space
                        android:layout_width="30dp"
                        android:layout_height="match_parent"/>
                    <RelativeLayout
                        android:layout_toEndOf="@+id/rl_ended_webtoon"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:paddingTop="6dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_hot"
                            android:paddingEnd="3dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/icon_hot_27x16" />

                        <TextView
                            android:id="@+id/tv_one_cut"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/one_cut"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_alignParentBottom="true"
                            android:layout_height="3dp"
                            android:background="@color/white" />
                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>


            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fcv_main"
                android:layout_below="@+id/ll_top_container"
                android:name="com.example.tomicsandroidappclone.presentation.fragment.MainPageFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true" />


        </RelativeLayout>

       <!-- <include android:id="@+id/activity_drawer" layout="@layout/activity_drawer"/>-->

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>